--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span class="orange-highlight">Imamul</span> Website</h1>
-        <h3>Professional Web Developer</h3>
+        <h3> World class Professional Web Developer</h3>
         <p> Hello! I am Imamul Haque. I am a student studying CST at Nanjing University of Information Science & Technology and currently in my second year. I am a passionate web developer. Programing,Web development and problem solving are some of my many diverse interests.</p>
         <a class="link-button" target="_blank" href="https://www.linkedin.com/in/imamul-haque-b890ba184/">Hire Me</a>
       </div>
